<resources>
    <string name="app_name">PodcastApp</string>
    <string name="cat_video_trendingnow">Trending Now</string>
    <string name="cat_video_new">New</string>
    <string name="cat_video_top_audio">Top Audio</string>
    <string name="btn_media_next1">Next</string>
    <string name="btn_media_back_step1">Back</string>
    <string name="btn_media_final_step1">Submit the video</string>
    <string name="btn_feedback_survey_result1">Quiz results</string>
    <string name="set_media_max_items1">6</string>
    <string name="txt_media_other1">&#160;out of&#160;</string>
    <string name="btn_media_reset1">Reset</string>
    <string name="intro_media">Please check all your video.</string>
    <string name="intro_media_notes1">Step 1/5</string>
    <string name="intro_media_notes2">Step 2/5</string>
    <string name="intro_media_notes3">Step 3/5</string>
    <string name="intro_media_notes4">Step 4/5</string>
    <string name="any_other_feedback">Your name</string>
    <string name="msg_feedback_confirmation">Thank you for providing your video.</string>
    <string name="msg_feedback_final_confirmation">We thank you for your time spent.</string>
    <string name="txt_tbl_title_downloads1">Downloads</string>
    <string name="txt_tbl_title_reviews1">Reviews</string>
    <string name="txt_tbl_title_episodes1">Episodes</string>
    <string name="txt_tbl_cal_items_downloads1">8M</string>
    <string name="txt_tbl_cal_items_episodes1">400K</string>
    <string name="txt_tbl_cal_items_billion1">1 Billion</string>
    <string name="txt_tbl_header_headline1">#1 Podcast App on Android and an average rating of 4.6/5</string>
    <string name="txt_tbl_header_logo_alt1">Podcast App</string>
    <string name="txt_tbl_feature_list_video_alt1">Podcast App</string>
    <string name="txt_tabs_title_cat1">Video</string>
    <string name="txt_tabs_title_cat2">Audio</string>
    <string name="txt_tabs_title_cat3">Custom</string>
    <string name="txt_tabs_title1">Trending Now</string>
    <string name="txt_tabs_title2">New</string>
    <string name="txt_tabs_title3">Top Audio</string>
    <string name="txt_tabs_title4">All</string>
    <string name="txt_tbl_webicons_title1">Feed</string>
    <string name="txt_tbl_webicons_title2">Discovery</string>
    <string name="txt_tbl_webicons_title3">Easy access</string>
    <string name="txt_tbl_webicons_title4">Add</string>
    <string name="txt_tbl_webicons_title5">Profile</string>
</resources>
