<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FFFFFF">

                <ImageView
                    android:id="@+id/logo_header1imgview"
                    android:layout_width="70dp"
                    android:layout_height="46dp"
                    android:layout_marginBottom="14dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="25dp"
                    android:contentDescription="@string/txt_tbl_header_logo_alt1"
                    android:src="@mipmap/ic_launcher_video_logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:textSize="19sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/txt_tbl_cal_items_downloads1"
                            android:textColor="#FFC730"
                            android:textSize="19sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:paddingEnd="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:text="@string/txt_tbl_cal_items_episodes1"
                            android:textColor="#FFC730"
                            android:textSize="19sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:paddingEnd="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:text="@string/txt_tbl_cal_items_billion1"
                            android:textColor="#FFC730"
                            android:textSize="19sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:text="@string/txt_tbl_title_downloads1"
                            android:textAllCaps="false"
                            android:textColor="#666666"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:text="@string/txt_tbl_title_reviews1"
                            android:textAllCaps="false"
                            android:textColor="#666666"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:text="@string/txt_tbl_title_episodes1"
                            android:textAllCaps="false"
                            android:textColor="#666666"
                            android:textSize="12sp" />
                    </TableRow>
                </TableLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingEnd="10dp"
                        android:paddingLeft="25dp"
                        android:paddingRight="10dp"
                        android:paddingStart="25dp"
                        android:paddingTop="8dp"
                        android:text="@string/txt_tbl_header_headline1"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutHeader"
            android:background="#3D3B3E"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingStart="7dp"
                android:paddingTop="8dp"
                android:text="@string/txt_tabs_title4"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="3dp"
                android:background="@android:color/holo_green_dark"></View>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTabBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linearLayoutTab"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/cat_v_trendingnow"
                style="@style/Cat_style_base1"
                android:background="@color/cat_bg_trendingnow"
                android:text="@string/cat_video_trendingnow" />

            <TextView
                android:id="@+id/cat_v_new"
                style="@style/Cat_style_base1"
                android:background="@color/cat_bg_new"
                android:text="@string/cat_video_new" />

            <TextView
                android:id="@+id/cat_v_top_audio"
                style="@style/Cat_style_base1"
                android:background="@color/cat_bg_top_audio"
                android:text="@string/cat_video_top_audio" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
